# VirtualLogiGate

./: .gitignore  CMakeLists.txt  README.md
src/: actions.c  actions.h  camera.c  camera.h  editor.c  editor.h  input.c  input.h  logic.c  logic.h  main.c  render_utils.c  render_utils.h  ui.c  ui.h  window.h
